[metadata]
name = pymongo-helper
version = 0.0.1
author = ambroisehdn
author_email = contact@ambroisehdn.me
description = The pymongo helper package is a Python library designed to simplify and streamline interactions with MongoDB databases using the PyMongo driver.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ambroisehdn/pymongo-helper
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: GPL-3.0 license
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
install_requires =
    pymongo